# stowockfish

./: .gitignore  Cargo.toml  rustfmt.toml
src/: bitboard.rs  checking_data.rs  chessboard.rs  chessboard_old.rs  chessmove.rs  dependency.txt  main.rs  test.cpp
src/chessboard/: mbb.rs
