[package]
name = "stowockfish"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[dependencies]
serde = { version = "1.0.193", features = ["derive"] }
rand = { version = "0.8.5", features = ["alloc"] }
bitintr = "0.3.0"